--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>LightningBase</RootNamespace>
-    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final</Configurations>
+    <Configurations>Debug;Release;Final</Configurations>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Description>Lightning Native Bindings</Description>
     <Authors>Ethan, starfrost</Authors>
@@ -15,15 +15,10 @@
   </PropertyGroup>
 
 	<!-- Import text templating -->
-	<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
+	<!--<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />-->
 	
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;WINDOWS,X64</DefineConstants>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;WINDOWS,ARM64</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
@@ -34,15 +29,10 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
-    <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+    <DefineConstants>TRACE;WINDOWS,X64,FINAL</DefineConstants>
     <Optimize>True</Optimize>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release.Arm64|AnyCPU'">
-	<PlatformTarget>ARM64</PlatformTarget>
-	<DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
-  </PropertyGroup>
-
+	
   <ItemGroup>
     <ProjectReference Include="..\NuCore.Utilities\NuCore.Utilities.csproj" />
   </ItemGroup>
