--- a/VSTemplate/basic.csproj
+++ b/VSTemplate/basic.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
@@ -18,12 +18,12 @@
     <Reference Include="LightningPackager">
       <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
     </Reference>
-    <Reference Include="NuCore.SDL2">
-      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.SDL2.dll</HintPath>
-    </Reference>
-    <Reference Include="NuCore.Utilities">
-      <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
-    </Reference>
+	<Reference Include="NuCore.Utilities">
+	  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
+	</Reference>
+	<Reference Include="NuCore.Utilities.Lightning">
+		<HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.Lightning.dll</HintPath>
+	</Reference>
   </ItemGroup>
 
 	<!-- Shared includes for all examples. These are copied individually because they are open source and devs use them as part of the SDK -->
@@ -46,10 +46,8 @@
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll" />
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libwebp-7.dll" />
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-v1.0.6-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-v2.0.5-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
-		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-v2.0.4-x64.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-x64.dll" />
+		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-x64.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -79,7 +77,7 @@
 		</Content>
 		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libpng16-16.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>llibpng16-16.dll</Link>
+			<Link>libpng16-16.dll</Link>
 		</Content>
 		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libvorbis-0.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -102,41 +100,33 @@
 		<Content Include="Content/Localisation/pseudo.ini">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libfreetype-6.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/freetype.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libfreetype-6.dll</Link>
+			<Link>freetype.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libjpeg-9.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libjpeg-5.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libjpeg-9.dll</Link>
+			<Link>libjpeg-5.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libtiff-5.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libtiff-5.dll</Link>
+			<Link>libtiff-5.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libwebp-7.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/libwebp-7.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/libwebp-7.dll</Link>
+			<Link>libwebp-7.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2.dll</Link>
+			<Link>SDL2.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-v1.0.6-x64.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_image.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_gfx-v1.0.6-x64.dll</Link>
+			<Link>SDL2_image.dll</Link>
 		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-x64.dll">
+		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/SDL2_mixer.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_image-x64.dll</Link>
-		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_ttf-v2.0.18-x64.dll</Link>
-		</Content>
-		<Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-x64.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<Link>Libraries/SDL2_mixer-x64.dll</Link>
+			<Link>SDL2_mixer.dll</Link>
 		</Content>
 	</ItemGroup>
 </Project>
