--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -138,8 +138,8 @@
   <ItemGroup>
     <ProjectReference Include="..\LightningPackager\LightningPackager.csproj" />
     <ProjectReference Include="..\NuCore.SDL2-CS\LightningBase.csproj" />
-    <ProjectReference Include="..\LightningUtil.Lightning\LightningUtilSdl.csproj" />
-    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
+    <ProjectReference Include="..\NuCore.Utilities.Lightning\LightningUtilSdl.csproj" />
+    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
