--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
-    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
+    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
