--- a/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
+++ b/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
@@ -20,7 +20,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\NuCore.SDL2-CS\LightningBase.csproj" />
-    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
+    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
